# backend/routes/api.php
@@ -92,6 +92,7 @@ Route::group(['middleware' => ['auth.jwt', 'track.activity']], function () {
 
     Route::get('user/follow/list', [UserSubscribeController::class, 'list']);
     Route::middleware(['user.get'])->group(static function() {
+        Route::get('user/{userId}/follow/list', [UserSubscribeController::class, 'list']);
         Route::get('user/{userId}/follow', [UserSubscribeController::class, 'exists']);
         Route::post('user/{userId}/follow', [UserSubscribeController::class, 'follow']);
         Route::delete('user/{userId}/follow', [UserSubscribeController::class, 'unfollow']);
